--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,3 +6,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
+<link
+  href="https://fonts.googleapis.com/css?family=Quicksand"
+  rel="stylesheet"
+/>
